created the header

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <title>Campus Life</title>
 </head>
 <body>
-    
+    <header id="banner">
+        <h1>Student Life</h1>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+    </header>
 </body>
 </html>
