Added the header and navigation bar

--- a/index.html
+++ b/index.html
@@ -7,6 +7,34 @@
     <header id="banner">
         <h1>Student Life</h1>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-    </header>
+    </header> 
+
+    <nav>
+        <ul>
+            <li> <a href="#">Student Organizations</a></li>
+            <li> <a href="#">Upcoming Event</a></li>
+            <li> <a href="#">Campus Event</a></li>
+        </ul>
+    </nav>
+
+    <section id="student-organizations">
+        <h2>Student Organizations</h2>
+        <p>"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremquet explicabo. </p>
+
+        <article class="organizations">
+            <h2>Student Organizations</h2>
+            <p>"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremquet explicabo. </p>
+        </article>
+
+        <article class="organizations">
+            <h2>Student Organizations</h2>
+            <p>"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremquet explicabo. </p>
+        </article>
+        
+        <article class="organizations">
+            <h2>Student Organizations</h2>
+            <p>"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremquet explicabo. </p>
+        </article>
+    </section>
 </body>
 </html>
